modifications in index

--- a/assets/style.css
+++ b/assets/style.css
@@ -48,6 +48,8 @@ h6{
 
 .fulfilinglove{
   background-color: #DDECFF;
+  height: 100%;
+  width: 100%;
 }
 .fulfilinglove h1{
   font-family: 'Inter', sans-serif;
