--- a/assets/style.css
+++ b/assets/style.css
@@ -28,13 +28,11 @@ h6{
 
 
 
-/* ENDING TAGS------------------------------------------------------------------------ */
+/*  ENDING TAGS   -------------------------------------------------------------------- */
 
 
-
-/* #navbarappoinment{
-  margin-left: 1%;
-} */
+/*  INDEX PAGE    --------------------------------------------------------------------- */
+ 
 
 .navbarphonenumber{
   color: #171010;
@@ -96,7 +94,7 @@ h6{
 }
 
 
-/* OUR SERVICES---------------------------------------------------------------------- */
+/* OUR SERVICES */
 
 .ourservices img{
   padding-left: 16%;
@@ -110,7 +108,7 @@ color: #222;
 font-size: 15px;
 font-style: normal;
 font-weight: 400;
-line-height: 141%; /* 23.97px */
+line-height: 141%; 
 }
 
 .ourservicessecondcard{
@@ -120,7 +118,7 @@ line-height: 141%; /* 23.97px */
   font-size: 15px;
   font-style: normal;
   font-weight: 400;
-  line-height: 141%; /* 23.97px */
+  line-height: 141%;  
 }
 
 .ourservicesthirdcard{
@@ -130,21 +128,21 @@ line-height: 141%; /* 23.97px */
   font-size: 15px;
   font-style: normal;
   font-weight: 400;
-  line-height: 141%; /* 23.97px */
+  line-height: 141%; 
 }
 
 .ourservices{
   margin-bottom: 15%;
 }
 
-/* VAGINAL REJUVENATION ------------------------------------------------------------- */
+/* VAGINAL REJUVENATION   */
 
 .Vaginalrejuvenation{
   background-color:  #E7F2FF;
   margin-bottom: 15%;
 }
 
-/*  FOUNDERS  ------------------------------------------------------------- */
+/*  FOUNDERS */
 
 .founders{
   background-color: #F2F2F2;
@@ -152,6 +150,87 @@ line-height: 141%; /* 23.97px */
   width: auto;
 }
 
+/*  ENDING  INDEX PAGE   -------------------------------------------------------------- */
+
+
+/*  ABOUT PAGE    -------------------------------------------------------------- */
+
+/* .aboutus{
+   background-image: url("img/about.png");
+   background-repeat: no-repeat;
+   height: 500px;
+   width: 100%;
+} */
+
+.aboutus {
+  /* position: absolute; */
+  background-image: url("img/about.png");
+  background-repeat: no-repeat;
+  height: 400px;
+  width: 100%;
+  position: relative;  
+}
+
+.aboutus::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(173, 216, 230, 0.7); /* Light blue with 0.7 opacity */
+}
+
+.aboutuscontent{
+   position: relative;
+   padding-top: 16%;
+}
+
+.ourstory{
+  /* padding: 5%; */
+  margin-top: -2%;
+  margin-left: 12%;
+  margin-right: 15%;
+  /* border: 1px 1px 1px 1px solid black; */
+  box-shadow: 20px 20px 20px 15px rgba(32, 32, 32, 0.1);
+
+}
+ 
+
+
+/*  ENDING  ABOUT PAGE   ------------------------------------------------------- */
+
+
+
+/*   CONTACT  PAGE   -------------------------------------------------------------- */
+
+/*  ENDING   CONTACT PAGE  --------------------------------------------------------- */
+ 
+
+
+/*   APPOINMENTPAGE      -------------------------------------------------------------- */
+
+#appoinmentfrom input {
+  width: 100%;
+  height: 38px;
+  flex-shrink: 0;
+  border-radius: 2px;
+  background: #e2e1e1;
+  border: 5px  black ;
+  margin-bottom: 8%;
+}
+
+#appoinmentfromselect{
+  width: 100%;
+  height: 38px;
+  flex-shrink: 0;
+  border-radius: 2px;
+  background: #e2e1e1;
+  border: 5px  black ;
+  margin-bottom: 4%;
+}
+
+/*  ENDING  APPOINMENTPAGE  ---------------------------------------------------  */
 
 /*  FOOTER  ------------------------------------------------------------- */
 
@@ -185,4 +264,7 @@ line-height: 141%; /* 23.97px */
 .footerthirdblock{
   padding-top: 9%;
 }
+
+
+/*  ENDING  FOOTER  ------------------------------------------------------------- */
 
