--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,11 @@
 
 /* TAGS------------------------------------------------------------------------------- */
 
+
+a{
+  text-decoration: none;
+}
+
 h1{
   font-family: 'Inter', sans-serif;
   font-size: 35px;
@@ -33,6 +38,13 @@ h6{
 
 /*  INDEX PAGE    --------------------------------------------------------------------- */
  
+
+.navbarsearchimage img{
+  background-color: #00304D;
+  height: 90%;
+  width: 100% ;
+  border-radius: 50%;
+}
 
 .navbarphonenumber{
   color: #171010;
@@ -148,20 +160,14 @@ line-height: 141%;
   background-color: #F2F2F2;
   height: auto;
   width: auto;
+  /* padding-bottom: 60%; */
 }
 
 /*  ENDING  INDEX PAGE   -------------------------------------------------------------- */
 
 
 /*  ABOUT PAGE    -------------------------------------------------------------- */
-
-/* .aboutus{
-   background-image: url("img/about.png");
-   background-repeat: no-repeat;
-   height: 500px;
-   width: 100%;
-} */
-
+ 
 .aboutus {
   /* position: absolute; */
   background-image: url("img/about.png");
@@ -204,12 +210,49 @@ line-height: 141%;
 
 /*   CONTACT  PAGE   -------------------------------------------------------------- */
 
+.contactus {
+  background-image: url("img/contact\ us\ image.jpeg");
+  background-repeat: no-repeat;
+  height: 400px;
+  width: 100%;
+  position: relative;  
+}
+
+.contactus::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(192, 225, 236, 0.7); 
+}
+
+.contactuscontent{
+   position: relative;
+   padding-top: 16%;
+}
+
+.ourstory{
+  margin-top: -2%;
+  margin-left: 12%;
+  margin-right: 15%;
+  box-shadow: 20px 20px 20px 15px rgba(32, 32, 32, 0.1);
+
+}
+
+
+
 /*  ENDING CONTACT PAGE  --------------------------------------------------------- */
  
 
 
 /*   APPOINMENTPAGE      -------------------------------------------------------------- */
 
+
+.mainsectionimage{
+   padding: 5% 5% 30%;
+}
 #appoinmentfrom input {
   width: 100%;
   height: 38px;
@@ -217,7 +260,7 @@ line-height: 141%;
   border-radius: 2px;
   background: #e2e1e1;
   border: 5px  black ;
-  margin-bottom: 8%;
+  margin-bottom: 4%;
 }
 
 #appoinmentfromselect{
@@ -229,6 +272,19 @@ line-height: 141%;
   border: 5px  black ;
   margin-bottom: 4%;
 }
+
+/* #writeyourmessage{
+  width: 100%;
+  height: 100px;
+  flex-shrink: 0;
+  border-radius: 2px;
+  background: #e2e1e1;
+  border: 5px  black ;
+  margin-bottom: 4%;
+
+} */
+
+ 
 
 /*  ENDING  APPOINMENTPAGE  ---------------------------------------------------  */
 
@@ -251,6 +307,17 @@ line-height: 141%;
   font-weight: 400;
   line-height: normal;
   font-family: 'Inter', sans-serif;
+}
+
+
+#footer h6 a{
+  color: #FFF;
+  font-size:  17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  font-family: 'Inter', sans-serif;
+  text-decoration: none;
 }
 
 .footerfirstblock{
