--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Neuton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 /* TAGS------------------------------------------------------------------------------- */
 
@@ -20,8 +21,42 @@ h1{
   text-align: left;
   color:  #003655;
 }
-h6{
+h3{
   font-family: 'Inter', sans-serif;
+  font-size: 35px;
+  font-weight: 500;
+  line-height: 52px;
+  letter-spacing: 0em;
+  text-align: center;
+  color:  #003655;
+}
+/* h5{
+  color: 555555;
+  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif;
+  font-size: 10px;
+  font-weight: 300;
+  line-height: 52px;
+  letter-spacing: 0em;
+  text-align: justify;
+  color:   #555555;
+
+
+} */
+
+span{
+  color: 555555;
+  font-family: 'Poppins', sans-serif;
+  /* font-size: 5px; */
+  /* font-weight: 300; */
+  /* line-height: 52px; */
+  letter-spacing: 0em;
+  text-align: justify;
+  color:   #555555;
+}
+
+h6{
+  font-family: 'Poppins', sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 30px;
@@ -89,6 +124,11 @@ h6{
   /* letter-spacing: 1px; */
   text-align: left;
   color:  #003655;
+}
+
+.fulfilingloveiconbar{
+  /* position:  absolute;
+  top:4%; */
 }
 
 .areyoulooking h6{
@@ -192,15 +232,13 @@ line-height: 141%;
    padding-top: 16%;
 }
 
-.ourstory{
-  /* padding: 5%; */
+/* .ourstory{
   margin-top: -2%;
   margin-left: 12%;
   margin-right: 15%;
-  /* border: 1px 1px 1px 1px solid black; */
   box-shadow: 20px 20px 20px 15px rgba(32, 32, 32, 0.1);
 
-}
+} */
  
 
 
@@ -233,13 +271,13 @@ line-height: 141%;
    padding-top: 16%;
 }
 
-.ourstory{
+/* .ourstory{
   margin-top: -2%;
   margin-left: 12%;
   margin-right: 15%;
   box-shadow: 20px 20px 20px 15px rgba(32, 32, 32, 0.1);
 
-}
+} */
 
 
 
