--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Neuton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');
 
 /* TAGS------------------------------------------------------------------------------- */
 
@@ -30,39 +31,23 @@ h3{
   text-align: center;
   color:  #003655;
 }
-/* h5{
-  color: 555555;
-  font-family: 'Inter', sans-serif;
-  font-family: 'Inter', sans-serif;
-  font-size: 10px;
-  font-weight: 300;
-  line-height: 52px;
-  letter-spacing: 0em;
-  text-align: justify;
-  color:   #555555;
-
-
-} */
 
 span{
   color: 555555;
   font-family: 'Poppins', sans-serif;
-  /* font-size: 5px; */
-  /* font-weight: 300; */
-  /* line-height: 52px; */
   letter-spacing: 0em;
   text-align: justify;
   color:   #555555;
 }
 
 h6{
-  font-family: 'Poppins', sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 30px;
-  letter-spacing: 0em;
-  color: #222222;
-  /* text-align: left; */
+  color: #333;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 190%;  
+
 }
 
 
@@ -90,6 +75,8 @@ h6{
   line-height: normal;
 }
 
+/* FULLFILING LOVE */
+
 .fulfilinglove{
   background-color: #DDECFF;
   height: 100%;
@@ -106,6 +93,7 @@ h6{
   text-align: left;
   color:  #003655;
 }
+
 .fulfilinglove h6{
   font-family: 'Inter', sans-serif;
   font-size: 20px;
@@ -113,17 +101,6 @@ h6{
   line-height: 30px;
   letter-spacing: 0em;
   color: #222222;
-  /* text-align: left; */
-}
-.areyoulooking h1{
-  font-family: 'Inter', sans-serif;
-  font-size: 35px;
-  font-weight: 500;
-  line-height: 52px;
-  letter-spacing: 0em;
-  /* letter-spacing: 1px; */
-  text-align: left;
-  color:  #003655;
 }
 
 .fulfilingloveiconbar{
@@ -131,19 +108,35 @@ h6{
   top:4%; */
 }
 
-.areyoulooking h6{
-  font-family: 'Inter', sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 30px;
-  letter-spacing: 0em;
-  color: #222222;
-  /* text-align: left; */
+/* ENDING  FULLFILING LOVE */
+
+/*  ARE YOU LOOKING  */
+
+.areyoulooking h1{
+  color:   #024262;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 117.8%;  
 }
+
+.areyoulooking h6{
+  color: #333;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 190%;  
+}
+
+ 
 
 .areyoulooking{
   margin-bottom: 10%;
 }
+
+/*  ENDING ARE YOU LOOKING  */
 
 
 /* OUR SERVICES */
