services pages responsive

--- a/assets/style.css
+++ b/assets/style.css
@@ -282,7 +282,7 @@ line-height: 141%;
 
 
 .mainsectionimage{
-   padding: 5% 5% 30%;
+   padding: 10% 5% 0% 20% ;
 }
 #appoinmentfrom input {
   width: 100%;
