--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,7 @@ h1{
   text-align: left;
   color:  #003655;
 }
+
 h3{
   font-family: 'Inter', sans-serif;
   font-size: 35px;
@@ -49,9 +50,6 @@ h6{
   line-height: 190%;  
 
 }
-
-
-
 
 /*  ENDING TAGS   -------------------------------------------------------------------- */
 
@@ -130,8 +128,6 @@ h6{
   line-height: 190%;  
 }
 
- 
-
 .areyoulooking{
   margin-bottom: 10%;
 }
@@ -193,7 +189,6 @@ line-height: 141%;
   background-color: #F2F2F2;
   height: auto;
   width: auto;
-  /* padding-bottom: 60%; */
 }
 
 /*  ENDING  INDEX PAGE   -------------------------------------------------------------- */
@@ -202,7 +197,6 @@ line-height: 141%;
 /*  ABOUT PAGE    -------------------------------------------------------------- */
  
 .aboutus {
-  /* position: absolute; */
   background-image: url("img/about.png");
   background-repeat: no-repeat;
   height: 400px;
@@ -217,21 +211,21 @@ line-height: 141%;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(173, 216, 230, 0.7); /* Light blue with 0.7 opacity */
+  background-color: rgba(173, 216, 230, 0.7); 
 }
 
 .aboutuscontent{
    position: relative;
    padding-top: 16%;
 }
-
-/* .ourstory{
-  margin-top: -2%;
-  margin-left: 12%;
-  margin-right: 15%;
-  box-shadow: 20px 20px 20px 15px rgba(32, 32, 32, 0.1);
-
-} */
+ 
+.ourstory{
+  /* position: relative;
+  margin-top: -8%; */
+  border-radius: 0.962px;
+  background: #FFF;
+  box-shadow: 0px 3.84694px 3.84694px 0px rgba(0, 0, 0, 0.25);
+}
  
 
 
@@ -284,14 +278,16 @@ line-height: 141%;
 .mainsectionimage{
    padding: 10% 5% 0% 20% ;
 }
+
 #appoinmentfrom input {
   width: 100%;
   height: 38px;
   flex-shrink: 0;
   border-radius: 2px;
-  background: #e2e1e1;
+  background: #F3F3F3;
+  color: #444;
   border: 5px  black ;
-  margin-bottom: 4%;
+  margin-bottom: 4%
 }
 
 #appoinmentfromselect{
@@ -299,24 +295,24 @@ line-height: 141%;
   height: 38px;
   flex-shrink: 0;
   border-radius: 2px;
-  background: #e2e1e1;
+  background:  #F3F3F3;
+  color: #444;
   border: 5px  black ;
   margin-bottom: 4%;
 }
 
-/* #writeyourmessage{
-  width: 100%;
-  height: 100px;
-  flex-shrink: 0;
-  border-radius: 2px;
-  background: #e2e1e1;
-  border: 5px  black ;
-  margin-bottom: 4%;
-
-} */
+#appoinmentsubmitbtn{
+  background-color:#024262;
+  color: #FFF;
+  font-size:  15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-left: 40%;
+  padding-right: 40%;
+}
 
  
-
 /*  ENDING  APPOINMENTPAGE  ---------------------------------------------------  */
 
 /*  FOOTER  ------------------------------------------------------------- */
