--- a/assets/style.css
+++ b/assets/style.css
@@ -140,6 +140,41 @@ h6{
   top:4%; */
 }
 
+
+
+#fulfilinglovenavbarpart{
+  position: relative;
+  background-color: #00527E;
+  height: auto;
+  width: auto;
+  color: #FFF;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-left: 15%;
+  margin-right: 18%;
+  margin-top: -2%;
+  border-radius: 5px;
+   
+}
+
+#fulfilinglovenavbarpart a {
+  color: #FFF;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-decoration: none;
+}
+
+#fulfilinglovenavbarpartsearch{
+  margin-top: -3%;
+}
+
+
 /* ENDING  FULLFILING LOVE */
 
 /*  ARE YOU LOOKING  */
@@ -422,7 +457,7 @@ Adjust for mobile devices
   padding: 20px;  
 }
 
-#appoinmentfrom input {
+.getintouch input {
   width: 100%;
   height: 38px;
   flex-shrink: 0;
@@ -431,17 +466,6 @@ Adjust for mobile devices
   color: #444;
   border: 5px  black ;
   margin-bottom: 4%
-}
-
-#appoinmentfromselect{
-  width: 100%;
-  height: 38px;
-  flex-shrink: 0;
-  border-radius: 2px;
-  background:  #F3F3F3;
-  color: #444;
-  border: 5px  black ;
-  margin-bottom: 4%;
 }
 
 #appoinmentsubmitbtn{
