--- a/assets/style.css
+++ b/assets/style.css
@@ -57,6 +57,12 @@ h6{
 
 }
 
+
+#button{
+  background-color: #036DA4;
+}
+
+
 /*  ENDING TAGS   -------------------------------------------------------------------- */
 
 
