--- a/assets/style.css
+++ b/assets/style.css
@@ -258,6 +258,19 @@ h6{
   margin-bottom: 10%;
 }
 
+/* OUR DOCTORS */
+
+.ourdoctors h1{
+  font-family: 'Inter', sans-serif;
+  font-size: 35px;
+  font-weight: 500;
+  line-height: 52px;
+  letter-spacing: 0em;
+  /* letter-spacing: 1px; */
+  text-align: left;
+  color:  #003655;
+}
+
 /*  FOUNDERS */
 
 .founders{
