--- a/assets/style.css
+++ b/assets/style.css
@@ -54,7 +54,6 @@ h6{
   font-style: normal;
   font-weight: 600;
   line-height: 190%;  
-
 }
 
 
@@ -177,7 +176,37 @@ h6{
 }
 
 #fulfilinglovenavbarpartsearch{
+  /* margin-top: -3%; */
+  width: 47px;
+  height: 46px;
+  /* position: fixed; */
+  /* bottom: 20px;
+  right: 20px; */
+  background-color: #00304D;
+  color: #fff;
+  padding: 5px;
+  border-radius: 50%;
+  text-decoration: none;
+  font-size: 24px;
+  text-align: center;
+  margin-bottom: 1%;
   margin-top: -3%;
+
+}
+
+.whatsapp-link {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25d366;
+  color: #fff;
+  padding: 5px;
+  border-radius: 50%;
+  text-decoration: none;
+  font-size: 24px;
+  text-align: center;
 }
 
 
@@ -204,7 +233,7 @@ h6{
 }
 
 .areyoulooking{
-  margin-bottom: 10%;
+  margin-bottom: 6%;
 }
 
 /*  ENDING ARE YOU LOOKING  */
@@ -262,14 +291,14 @@ h6{
 }
 
 .ourservices{
-  margin-bottom: 10%;
+  margin-bottom: 5%;
 }
 
 /* VAGINAL REJUVENATION   */
 
 .Vaginalrejuvenation{
   background-color:  #E7F2FF;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
 }
 
 /* OUR DOCTORS */
