adding content and images in services page

--- a/assets/style.css
+++ b/assets/style.css
@@ -140,10 +140,10 @@ h6{
   color: #222222;
 }
 
-.fulfilingloveiconbar{
-  /* position:  absolute;
-  top:4%; */
-}
+/* .fulfilingloveiconbar{
+  position:  absolute;
+  top:4%;
+} */
 
 
 
