adding mens cilinic logo and content to services

--- a/assets/style.css
+++ b/assets/style.css
@@ -301,6 +301,11 @@ h6{
   margin-bottom: 5%;
 }
 
+.Vaginalrejuvenation li a{
+  color:  #E7F2FF ;
+  text-decoration: none;
+}
+
 /* OUR DOCTORS */
 
 .ourdoctors h1{
