--- a/assets/style.css
+++ b/assets/style.css
@@ -68,13 +68,19 @@ h6{
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1000; /* Adjust the z-index as needed */
+    z-index: 1000;  
   }
 
   body {
-      padding-top: 5%; /* Adjust the percentage based on your design */
+      padding-top: 5%;  
   }
 
+
+  @media only screen and (max-width: 768px) {
+    body {
+        padding-top: 10%;
+    }
+}
 
 
 /*  ENDING TAGS   -------------------------------------------------------------------- */
