--- a/assets/style.css
+++ b/assets/style.css
@@ -76,7 +76,7 @@ h6{
   }
 
 
-  @media only screen and (max-width: 768px) {
+  @media (max-width: 768px) {
     body {
         padding-top: 40%;
     }
