--- a/assets/style.css
+++ b/assets/style.css
@@ -586,7 +586,7 @@ Adjust for mobile devices
  
 
 
-/*   APPOINMENTPAGE      -------------------------------------------------------------- */
+/*   appointmentPAGE      -------------------------------------------------------------- */
 
 .mainsection{
   color: #444;
@@ -601,7 +601,7 @@ Adjust for mobile devices
    /* padding: 10% 5% 0% 20% ; */
 }
 
-#appoinmentfrom input {
+#appointmentfrom input {
   width: 100%;
   height: 38px;
   flex-shrink: 0;
@@ -612,7 +612,7 @@ Adjust for mobile devices
   margin-bottom: 4%
 }
 
-#appoinmentfromselect{
+#appointmentfromselect{
   width: 100%;
   height: 38px;
   flex-shrink: 0;
@@ -623,7 +623,7 @@ Adjust for mobile devices
   margin-bottom: 4%;
 }
 
-#appoinmentsubmitbtn{
+#appointmentsubmitbtn{
   background-color:#024262;
   color: #FFF;
   font-size:  15px;
@@ -635,7 +635,7 @@ Adjust for mobile devices
 }
 
  
-/*  ENDING  APPOINMENTPAGE  ---------------------------------------------------  */
+/*  ENDING  appointmentPAGE  ---------------------------------------------------  */
 
 /*  FOOTER  ------------------------------------------------------------- */
 
