remove some services and resize the image

--- a/assets/style.css
+++ b/assets/style.css
@@ -63,7 +63,7 @@ h6{
 
 
 
-  .navbar.fixed-top {
+  /* .navbar.fixed-top {
     background-color: #fff;
     position: fixed;
     top: 0;
@@ -79,7 +79,7 @@ h6{
     body {
         padding-top: 15%;
     }
-}
+} */
 
 
 /*  ENDING TAGS   -------------------------------------------------------------------- */
