seo changes updaetd with images rename and seo tittle and meta tag and descrption added

--- a/assets/style.css
+++ b/assets/style.css
@@ -380,7 +380,7 @@ h6{
   position: relative;  
 } */
 .aboutus {
-  background-image: url("img/about.png");
+  background-image: url("img/best_couples_clinic_Aruna_couples_clinic.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 400px;
